2007-04-06  Chong Yidong  <cyd@stupidchicken.com>

	* mail/sendmail.el (mail-text, mail-mode): Revert extant pieces of
	1995-05-19 doc changes.

2007-04-06  Kim F. Storm  <storm@cua.dk>

	* loadhist.el (read-feature): Reimplement.  New optional arg LOADED-P.
	(unload-feature): Update interactive spec accordingly.

	* progmodes/grep.el (grep-program): Remove commentary about zgrep.

2007-04-06  John Paul Wallington  <jpw@pobox.com>

	* subr.el (with-case-table): Use `make-symbol' to avoid variable
	capture.  Restore the table in the same buffer.

	* font-lock.el (lisp-font-lock-keywords-2): Add `with-case-table'.

2007-04-05  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/byte-opt.el (byte-optimize-form-code-walker): Print
	entire form.

2007-04-05  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (breakpoint-disabled): Tweak face (again)
	for low-color displays.

2007-04-05  Glenn Morris  <rgm@gnu.org>

	* play/5x5.el, play/animate.el, play/dissociate.el, play/doctor.el,
	* play/gomoku.el, play/landmark.el, play/tetris.el, play/zone.el:
	Seed RNG on loading.

	* emacs-lisp/authors.el (top-level): Provide self.
	* play/animate.el (top-level): Provide self.

2007-04-04  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-vars.el (c-special-indent-hook): Amend doc-string
	to mention c-syntactic-indentation.

2007-04-04  Chong Yidong  <cyd@stupidchicken.com>

	* subr.el (with-case-table): New macro.

	* international/mule.el (ascii-case-table): New var.

	* mail/smtpmail.el (smtpmail-via-smtp): Use ascii-case-table when
	downcasing.

2007-04-03  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-minor-mode-map): Simplify.

	* t-mouse.el (t-mouse-make-event-element): Don't use the left edge
	of the window if we're outside it e.g menu-bar.

	* xt-mouse.el (xterm-mouse-event): Don't use the left edge of the
	window if we're outside it e.g menu-bar.

2007-04-03  Eli Zaretskii  <eliz@gnu.org>
